--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,6 +3,7 @@
   "name": "app",
   "main": "index.ts",
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
     "@my/config": "*",
     "@my/ui": "*",
     "@react-navigation/native": "^6.0.11",
@@ -13,8 +14,15 @@
     "@tamagui/font-inter": "1.0.1-beta.190",
     "@tamagui/shorthands": "1.0.1-beta.190",
     "@tamagui/theme-base": "1.0.1-beta.190",
+    "expo-gl": "^11.4.0",
     "expo-linking": "^3.2.2",
-    "solito": "^0.0.26"
+    "expo-three": "^6.2.0",
+    "solito": "^0.0.26",
+    "three": "^0.145.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "devDependencies": {
+    "@types/three": "^0.144.0"
+  },
+  "type": "module"
 }
