feat: added r3f and update home page

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -8,6 +8,7 @@
     "@my/ui": "*",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@react-three/fiber": "^8.8.9",
     "@tamagui/animations-react-native": "1.0.1-beta.190",
     "@tamagui/colors": "1.0.1-beta.190",
     "@tamagui/feather-icons": "1.0.1-beta.190",
