--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -16,6 +16,8 @@
     "@tamagui/font-inter": "1.0.1-beta.190",
     "@tamagui/shorthands": "1.0.1-beta.190",
     "@tamagui/theme-base": "1.0.1-beta.190",
+    "base64-arraybuffer": "^1.0.2",
+    "expo-device": "^4.3.0",
     "expo-gl": "^11.4.0",
     "expo-linking": "^3.2.2",
     "expo-three": "^6.2.0",
